--- a/src/index.html
+++ b/src/index.html
@@ -230,11 +230,31 @@
                     </div>
                 </div>
             </section>
+
+            <div class="divider-1"></div>
+
+            <footer class="section">
+                <div class="container grid">
+                    <div class="brand">
+                        <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
+                        <p>©2021 Beautysalon.</p>
+                        <p>Todos os direitos reservador.</p>
+                    </div>
+                    <div class="social">
+                        <a href="https://instagram.com" target="_blank">
+                            <i class="icon-instagram"></i>
+                        </a>
+                        <a href="https://facebook.com" target="_blank">
+                            <i class="icon-facebook"></i>
+                        </a>
+                        <a href="https://youtube.com" target="_blank">
+                            <i class="icon-youtube"></i>
+                        </a>
+                    </div>
+                </div>
+            </footer>
         </main>
 
-        <footer>
-
-        </footer>
 
         <!-- Script do Swipper para o carrossel -->
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
